| Summary: | ASTERISK-29358: chan_pjsip: Trace message for progress is output even if frame is not queued | ||
| Reporter: | Michael Maier (micha) | Labels: | |
| Date Opened: | 2021-03-20 00:06:15 | Date Closed: | 2021-05-13 07:16:11 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 18.0.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) chan_pjsip.c-misleading-trace-info.diff.gz | |
| Description: | The function chan_pjsip_incoming_response handles the status code 183. Unfortunately, the trace output is somewhat misleading. The trace message is output even if the progress frame is not queued. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-03-20 00:06:16.937-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Michael Maier (micha) 2021-03-20 00:07:23.168-0500 As I'm not allowed to add a patch, I have to go this way ... By: Joshua C. Colp (jcolp) 2021-03-20 03:40:44.922-0500 Patches can only be attached if a license agreement is on file. I've marked the patch as a Contribution which has hidden it, as no license agreement is on file. By: Michael Maier (micha) 2021-03-20 23:38:09.856-0500 I provided a patch proposal - not the patch itself. The attached patch (see history) is nothing more as a short version of a literal description. You may use it as the final patch if you want or you may change it or you may ignore it - it's up to you. Asterisk is published under the GPL 2, which allows changes and I'm giving them back. This is a public issues tracker everyone can read. This means: If I wouldn't want others to read or even use this proposal, I wouldn't provide it at all here. I would sign a license agreement - but I never will provide any personal data like address or phone number, which could be read tomorrow in the internet by everyone and which could be misused easily. Please think about protection of privacy. By: Joshua C. Colp (jcolp) 2021-03-21 04:20:31.616-0500 It's certainly your right not to sign the license agreement if you wish, however as a project Asterisk is dual licensed and thus for contributions (which includes even a proposal of a change) we do require the signing of the agreement - this includes for putting patches up on the issue tracker. We try to keep the licensing as clean as we can. By: Friendly Automation (friendly-automation) 2021-05-13 07:16:12.275-0500 Change 15873 merged by Friendly Automation: chan_pjsip: Correct misleading trace message [https://gerrit.asterisk.org/c/asterisk/+/15873|https://gerrit.asterisk.org/c/asterisk/+/15873] By: Friendly Automation (friendly-automation) 2021-05-13 07:17:37.032-0500 Change 15884 merged by Friendly Automation: chan_pjsip: Correct misleading trace message [https://gerrit.asterisk.org/c/asterisk/+/15884|https://gerrit.asterisk.org/c/asterisk/+/15884] By: Friendly Automation (friendly-automation) 2021-05-13 07:22:47.664-0500 Change 15885 merged by Joshua Colp: chan_pjsip: Correct misleading trace message [https://gerrit.asterisk.org/c/asterisk/+/15885|https://gerrit.asterisk.org/c/asterisk/+/15885] | ||