channels/chan_pjsip.c
@@ -3174,13 +3174,14 @@ static void chan_pjsip_incoming_response(struct ast_sip_session *session, struct
 		break;
 	}
 	case 183:
-		ast_trace(-1, "%s: Queueing PROGRESS\n", ast_sip_session_get_name(session));
 		if (session->endpoint->ignore_183_without_sdp) {
 			pjsip_rdata_sdp_info *sdp = pjsip_rdata_get_sdp_info(rdata);
 			if (sdp && sdp->body.ptr) {
+				ast_trace(-1, "%s: Queueing PROGRESS\n", ast_sip_session_get_name(session));
 				ast_queue_control(session->channel, AST_CONTROL_PROGRESS);
 			}
 		} else {
+			ast_trace(-1, "%s: Queueing PROGRESS\n", ast_sip_session_get_name(session));
 			ast_queue_control(session->channel, AST_CONTROL_PROGRESS);
 		}
 		break;
